test(durability): implement the product arm on the real release tarball
The `product` arm was declared everywhere and implemented nowhere: it exited 64
inside the guest, and because the workload is launched with `setsid ... &` the
SSH call returned 0, so it resurfaced later as the misleading "workload never
reached its first commit". Three of run-matrix.sh's four cells named it.

It now runs the release tarball (core/src/main/assembly/no-jre.xml), unpacked in
the guest and started by the real questdb.sh. That matters because the shipped
launcher starts a different RUNTIME CONFIGURATION, not merely a different jar:

    every arm so far   java -cp benchmarks.jar io.questdb.ServerMain
                       --enable-native-access=ALL-UNNAMED  --add-opens=...=ALL-UNNAMED
    questdb.sh         java -p questdb.jar -m io.questdb/io.questdb.ServerMain
                       --enable-native-access=io.questdb   --add-opens=...=io.questdb

Reflection, native-access enforcement, resource loading and native-library
extraction all follow the module, so a regression in any of them was invisible to
every other arm. benchmarks.jar is also a JMH shade-jar, not a release artifact.

The arm is qwp-sf with ONE variable changed -- the server binary and how it is
launched -- so a divergence is attributable to packaging rather than to a
different test. Client, payload, oracle and bar are qwp-sf's, unchanged.

W>0 IS SUPPORTED, and is the interesting case. The old W=0 restriction existed
because the client-side LOCAL durable-ack frontier did not exist; it landed with
issues/17, and was re-verified through the shipped launcher before this arm was
enabled. The RPO_UNVERIFIED downgrade in power-cut-vm.sh is deleted rather than
left dormant: a latent "cannot enforce" branch on a path that now can is how a
bar quietly stops being one.

THE SHIPPED ARTIFACT DOES THE RECOVERING. Before the oracle opens the crashed
database, the product server starts on it and its recovery is the one under test;
